--- a/css/style.css
+++ b/css/style.css
@@ -12,30 +12,47 @@ body
 }
 header
 {
-    padding: 10px 100px;
-    z-index: 100000;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
+
+
 nav
 {
-    width: 100%;
-    height: 50px;
+    width: 80%;
+    height: 70px;
     border-top: 1px solid rgba(255,255,255,.2);
     border-bottom: 1px solid rgba(255,255,255,.2);
-    position: -webkit-sticky;
-    top: 0px;
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
 }
+
+nav .icon-img{
+    width: 20%;
+}
+
+nav .icon-img img{
+    height: 60px;
+    display: block;
+    margin: auto;
+}
+
 nav ul
 {
     display: flex;
     margin: 0;
-    padding: 0 100px;
-    position: sticky;
-    float: right;
 
 }
+
 nav ul li
 {
     list-style: none;
+    padding: 10px;
 
 }
 nav ul li a
@@ -47,10 +64,15 @@ nav ul li a
     text-transform: uppercase;
     font-weight: bold;
     line-height: 50px;
+    height: 100%;
 
 }
-nav ul li a:hover
-nav ul li a .active
+nav ul li a:hover{
+    background-color: white;
+    color: black;
+}
+
+nav ul li a.active
 {
     background: #f00;
 }
