--- a/css/Contactstyle.css
+++ b/css/Contactstyle.css
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: url(contactback.jpg);
+    background: url("../resources/icons/contactback.jpg");
     background-size: cover;
 }
 .contact .content
