--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@
 body
 {
     background: #000;
-    min-height: 200vh;
 }
+
 header
 {
     width: 100%;
     display: flex;
     justify-content: center;
+    z-index: 1;
 }
 
 
@@ -49,13 +50,7 @@ nav ul
 
 }
 
-nav ul li
-{
-    list-style: none;
-    padding: 10px;
-
-}
-nav ul li a
+nav ul a
 {
     display: block;
     color: #fff;
@@ -67,24 +62,27 @@ nav ul li a
     height: 100%;
 
 }
-nav ul li a:hover{
+nav ul a:hover{
     background-color: white;
     color: black;
 }
 
-nav ul li a.active
+nav ul a.active
 {
     background: #f00;
 }
-.banner
+section.banner
 {
     position: relative;
     width: 100%;
-    height: 120vh;
+    height: 100vh;
     display: flex;
     background-position: center center;
-    background: url(banner4.jpg);
+    background-image: url('../resources/icons/banner4.jpg');
     background-size: cover;
+    z-index: -1;
+    padding: 0;
+    margin: 0;
 }
 .content
 {
@@ -163,6 +161,7 @@ section ul li.active
 {
     display: flex;
     flex-wrap: wrap;
+    z-index: -1;
 }
 .product .itemBox
 {
@@ -170,6 +169,7 @@ section ul li.active
     width: 300px;
     height: 300px;
     margin: 5px;
+    z-index: -1;
 }
 .product .itemBox img
 {
@@ -179,4 +179,5 @@ section ul li.active
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: -1;
 }
